Add Models (Basket, Order, User, Payment)

--- a/HuntingAndFishingStore solution/Data/App.config
+++ b/HuntingAndFishingStore solution/Data/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="GunStoreContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Data.GunStoreContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GunStoreContext" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=GunStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
