--- a/HuntingAndFishingStore solution/Data/Data.csproj
+++ b/HuntingAndFishingStore solution/Data/Data.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntityConfiguration\OrderConfiguration.cs" />
     <Compile Include="GunStoreContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
