--- a/HuntingAndFishingStore solution/Models/Models.csproj
+++ b/HuntingAndFishingStore solution/Models/Models.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,17 +41,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Basket.cs" />
     <Compile Include="Baton.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Flashlight.cs" />
     <Compile Include="Holster.cs" />
     <Compile Include="Clothing.cs" />
     <Compile Include="Knife.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="Payment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Firearm.cs" />
     <Compile Include="Round.cs" />
     <Compile Include="Scope.cs" />
     <Compile Include="Tazer.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
