--- a/HuntingAndFishingStore solution/Application/Application.csproj
+++ b/HuntingAndFishingStore solution/Application/Application.csproj
@@ -178,6 +178,9 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Shared\_LoggedinUserLayout.cshtml" />
+    <Content Include="Views\Home\LoggedinUserIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
