--- a/HuntingAndFishingStore solution/Application/Application.csproj
+++ b/HuntingAndFishingStore solution/Application/Application.csproj
@@ -198,6 +198,7 @@
     <Content Include="Views\Admin\AddRound.cshtml" />
     <Content Include="Views\Admin\AddScope.cshtml" />
     <Content Include="Views\Admin\AddTazer.cshtml" />
+    <Content Include="Views\Admin\RemoveProduct.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
